Fix breakout title length issues. Fixes #134.
Because the slug field had a max length of 50, when the breakout title
was between 50 and 80 characters, there was no error message displayed
(since 80 character titles are OK) but title setting would fail (because
the slug would be too long).

Increase the slug field to 90 chars so that it can include the slugified
title with ID appended.

Fix inconsistency between maximum lengths in in-place-editor and modal
editor.

Fix overflow wrap for title display in breakout list.

--- a/reunhangout/static/scss/pages/plenary/_breakoutliststyle.scss
+++ b/reunhangout/static/scss/pages/plenary/_breakoutliststyle.scss
@@ -53,6 +53,7 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   .breakout-list-item{
     background-color: #f5f5f5;
@@ -61,10 +62,13 @@
 
     .breakout-list-item-row{
       display: flex;
-      flex-direction:row;
+      flex-direction: row;
+      max-width: 100%;
 
       .breakout-list-item-left-col{
         flex-grow: 1;
+        min-width: 0px; // https://css-tricks.com/flexbox-truncated-text/
+        overflow-wrap: break-word;
         border-top: 2px solid #9b9b9b;
         border-bottom: 2px solid #9b9b9b;
         border-left: 2px solid #9b9b9b;
